# evdev-record-xml

./: INSTALL  configure.ac
src/: Makefile.am  evdev-xml-impl.h  evdev-xml.c  evdev-xml.h
tools/: Makefile.am  evdev-record-xml.c
